Atualização Tela inicial

--- a/html/tela1.html
+++ b/html/tela1.html
@@ -12,10 +12,12 @@
         <h1>Jogo da Velha</h1>
 
         <input type="text" placeholder="Digite seu nome..." class="nome">
-
+    
+        <div class="btn-container">
         <input type="button" value="Jogar" class="Botão1">
         <input type="button" value="Contra a Máquina" class="Botão2">
         <input type="button" value="Máquina vs. Máquina" class="Botão3">
+    </div>    
     </div>
     
     <script src="../script/script"></script>
