--- a/html/tela2.html
+++ b/html/tela2.html
@@ -5,11 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="../css/style2.css" />
-    <title>Document</title>
+    <title>Escolha sua peça</title>
 </head>
 <body>
     
+    <div class="container2">
+        <h1>Escolha sua peça</h1>
 
+        <div class="btn-container2">
+            <input type="button"  value="X" class="Botão1">
+            <input type="button" value="O" class="Botão2">
+        </div>   
+
+    </div>
     <script src="../script/script2"></script>
 </body>
 </html>
