Adicionando funcionalidade aos botões

--- a/html/tela2.html
+++ b/html/tela2.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     
-    <div class="container2">
+    <form class="container2" id="tela2">
         <h1>Escolha sua peça</h1>
 
         <div class="btn-container2">
             <input type="button"  value="X" class="Botão1">
             <input type="button" value="O" class="Botão2">
-        </div>   
+            <a type="button" class="btn-voltar" href="http://127.0.0.1:5500/html/tela1.html">Voltar</a>
+        </div>
 
-    </div>
+        
+    </form>
     <script src="../script/script2"></script>
 </body>
 </html>
