Alteração dos links dos botões

--- a/html/tela1.html
+++ b/html/tela1.html
@@ -14,8 +14,8 @@
     
         <div class="btn-container"> 
 
-        <a class="Botão1" href="http://127.0.0.1:5500/html/tela2.html">Jogar</a>
-        <a class="Botão2" href="http://127.0.0.1:5500/html/tela2.html">vs. Máquina</a> 
+        <a class="Botão1" href="../html/tela2.html">Jogar</a>
+        <a class="Botão2" href="../html/tela2.html">vs. Máquina</a> 
         <a class="Botão3" href="">Máquina vs. Máquina</a>     
 
         </div>    
