--- a/html/tela2.html
+++ b/html/tela2.html
@@ -15,7 +15,7 @@
         <div class="btn-container2">
             <input type="button"  value="X" class="Botão1">
             <input type="button" value="O" class="Botão2">
-            <a type="button" class="btn-voltar" href="http://127.0.0.1:5500/html/tela1.html">Voltar</a>
+            <a type="button" class="btn-voltar" href="../html/tela1.html">Voltar</a>
         </div>
 
         
