--- a/html/tela2.html
+++ b/html/tela2.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     
-    <form class="container2" id="tela2">
+    <div class="container2" id="tela2">
         <h1>Escolha sua peça</h1>
 
         <div class="btn-container2">
-            <input type="button"  value="X" class="Botão1">
-            <input type="button" value="O" class="Botão2">
+            <input type="button"  value="X" class="Botão1" href="../html/tela3.html">
+            <input type="button" value="O" class="Botão2" href="../html/tela3.html"> 
+
             <a type="button" class="btn-voltar" href="../html/tela1.html">Voltar</a>
         </div>
-
         
-    </form>
+    </div>
     <script src="../script/script2"></script>
 </body>
 </html>
