Integração de botões

--- a/html/tela1.html
+++ b/html/tela1.html
@@ -16,7 +16,7 @@
 
         <a class="Botão1" href="../html/tela2.html">Jogar</a>
         <a class="Botão2" href="../html/tela2.html">vs. Máquina</a> 
-        <a class="Botão3" href="">Máquina vs. Máquina</a>     
+        <a class="Botão3" href="../html/tela3.html">Máquina vs. Máquina</a>     
 
         </div>    
     </div>
