--- a/html/tela2.html
+++ b/html/tela2.html
@@ -12,14 +12,12 @@
     <div class="container2" id="tela2">
         <h1>Escolha sua peça</h1>
 
-        <div class="btn-container2">
-            <input type="button"  value="X" class="Botão1" href="../html/tela3.html">
-            <input type="button" value="O" class="Botão2" href="../html/tela3.html"> 
+            <a class="Botão4" href="../html/tela3.html">X</a>
+            <a class="Botão5" href="../html/tela3.html">O</a> 
 
             <a type="button" class="btn-voltar" href="../html/tela1.html">Voltar</a>
         </div>
-        
-    </div>
+
     <script src="../script/script2"></script>
 </body>
 </html>
