--- a/html/tela3.html
+++ b/html/tela3.html
@@ -29,12 +29,11 @@
         <div id="9" class="cell">-</div>
     </div>    
 
-        <div class="btn-container3">
-            <a type="button" class="btn-voltar2" href="../html/tela1.html">Voltar</a> 
-        </div>
+        <a type="button" class="btn-voltar2" href="../html/tela1.html">Voltar</a>
+        <button type="restart" class="btn-reiniciar">Reiniciar</button>
+
+    </div>
         
-        </div>
-    
     <script src="../script/script3"></script>
 </body>
 </html>
