Atualização de tamanho/cor segunda tela

--- a/html/tela2.html
+++ b/html/tela2.html
@@ -12,11 +12,15 @@
     <div class="container2" id="tela2">
         <h1>Escolha sua peça</h1>
 
+        <div class="btn-container1">
             <a class="Botão4" href="../html/tela3.html">X</a>
-            <a class="Botão5" href="../html/tela3.html">O</a> 
+            <a class="Botão5" href="../html/tela3.html">O</a>
+        </div> 
 
+        <div class="btn-container2">
             <a type="button" class="btn-voltar" href="../html/tela1.html">Voltar</a>
-        </div>
+        </div>    
+    </div>
 
     <script src="../script/script2"></script>
 </body>
