--- a/html/tela1.html
+++ b/html/tela1.html
@@ -22,6 +22,6 @@
     </div>
     
     
-    <script src="../script/script"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
