--- a/html/tela2.html
+++ b/html/tela2.html
@@ -22,6 +22,6 @@
         </div>    
     </div>
 
-    <script src="../script/script2"></script>
+    <script src="../js/script2.js"></script>
 </body>
 </html>
