--- a/html/tela3.html
+++ b/html/tela3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,30 +10,30 @@
 <body>
     <div class="container3">
         <h1>Jogo da Velha</h1>
-        
+     <div class="grid">   
      <div>
-        <div id="1" class="cell">-</div>
-        <div id="2" class="cell">-</div>
-        <div id="3" class="cell">-</div>
+        <div class="cell" id="0">-</div>
+        <div class="cell" id="1">-</div>
+        <div class="cell" id="2">-</div>
     </div>
 
     <div>
-        <div id="4" class="cell">-</div>
-        <div id="5" class="cell">-</div>
-        <div id="6" class="cell">-</div>
+        <div class="cell" id="3">-</div>
+        <div class="cell" id="4">-</div>
+        <div class="cell" id="5">-</div>
     </div>
 
     <div>
-        <div id="7" class="cell">-</div>
-        <div id="8" class="cell">-</div>
-        <div id="9" class="cell">-</div>
-    </div>    
-
+        <div class="cell" id="6">-</div>
+        <div class="cell" id="7">-</div>
+        <div class="cell" id="8">-</div>
+    </div>   
+    </div>
         <a type="button" class="btn-voltar2" href="../html/tela1.html">Voltar</a>
         <button type="restart" class="btn-reiniciar">Reiniciar</button>
 
     </div>
-        
-    <script src="../script/script3"></script>
+        <script src="../js/tabuleiro.js"></script>
+
 </body>
 </html>
