Estruta de vitória/velha

--- a/html/tela3.html
+++ b/html/tela3.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container3">
         <h1>Jogo da Velha</h1>
-     <div class="grid">   
+
      <div>
         <div class="cell" id="0">-</div>
         <div class="cell" id="1">-</div>
@@ -28,9 +28,9 @@
         <div class="cell" id="7">-</div>
         <div class="cell" id="8">-</div>
     </div>   
-    </div>
+
         <a type="button" class="btn-voltar2" href="../html/tela1.html">Voltar</a>
-        <button type="restart" class="btn-reiniciar">Reiniciar</button>
+        <button type="reset" class="reiniciar">Reiniciar</button>
 
     </div>
         <script src="../js/tabuleiro.js"></script>
