--- a/html/tela3.html
+++ b/html/tela3.html
@@ -30,8 +30,11 @@
     </div>   
 
         <a type="button" class="btn-voltar2" href="../html/tela1.html">Voltar</a>
-        <button type="reset" class="reiniciar">Reiniciar</button>
+    </div>
 
+    <div class="mensagemvitoria" mensagem-de-vitoria>
+        <p class="textovitoria" texto-de-vitoria>X venceu!</p>
+        <button class="btn-reiniciar" btn-reiniciar>Reiniciar</button>
     </div>
         <script src="../js/tabuleiro.js"></script>
 
