Atualização de layout

--- a/html/Tela de jogo.html
+++ b/html/Tela de jogo.html
@@ -8,7 +8,7 @@
     <title>Jogo da Velha</title>
 </head>
 <body>
-    <div class="container3">
+    <div class="container">
         <h1>Jogo da Velha</h1>
 
      <div>
@@ -29,14 +29,22 @@
         <div class="cell" id="8">-</div>
     </div>   
 
-        <a type="button" class="btn-voltar2" href="../html/tela1.html">Voltar</a>
+        <div class="btn-container"> 
+
+            <a class="Botão1" href="../html/Tela de jogo.html">Jogar</a>
+            <a class="Botão2" href="">vs. Máquina</a> 
+            <a class="Botão3" href="">Máquina vs. Máquina</a>     
+    
+        </div> 
+
     </div>
 
     <div class="mensagemvitoria" mensagem-de-vitoria>
         <p class="textovitoria" texto-de-vitoria>X venceu!</p>
         <button class="btn-reiniciar" btn-reiniciar>Reiniciar</button>
     </div>
-        <script src="../js/tabuleiro.js"></script>
+
+            <script src="../js/tabuleiro.js"></script>
 
 </body>
 </html>
