Remoção do botão jogar

--- a/html/Tela de jogo.html
+++ b/html/Tela de jogo.html
@@ -31,7 +31,6 @@
 
         <div class="btn-container"> 
 
-            <a class="Botão1" href="../html/Tela de jogo.html">Jogar</a>
             <a class="Botão2" href="">vs. Máquina</a> 
             <a class="Botão3" href="">Máquina vs. Máquina</a>     
     
@@ -45,6 +44,7 @@
     </div>
 
             <script src="../js/tabuleiro.js"></script>
+            <script src="../js/vsmáquina.js"></script>          
 
 </body>
 </html>
