--- a/html/Tela de jogo.html
+++ b/html/Tela de jogo.html
@@ -43,14 +43,6 @@
         <p class="textovitoria" texto-de-vitoria>X venceu!</p>
     </div>
 
-    <script src="../js/vsplayer.js"></script>
-    
-    <!-- <script src="../js/vsmaquina.js"></script>
-    <script src="../js/vsplayer.js"></script>
-    <script src="../js/tabuleiro.js"></script>
-    <script src="../js/automatico.js"></script>
-<script src="../js/automatico.js"></script>  -->
-
-
+    <script src="../js/game.js"></script>
     </body>
 </html>
