--- a/html/Tela de jogo.html
+++ b/html/Tela de jogo.html
@@ -9,30 +9,20 @@
     </head>
     
     <body>
-        <div class="container"> <!--Box onde vai ficar o jogo da velha-->
-            <h1>Jogo da Velha</h1>
-                <div>
-                    <div class="cell" id="0">-</div>
-                    <div class="cell" id="1">-</div>
-                    <div class="cell" id="2">-</div>
-                </div>
-
-                <div>
-                    <div class="cell" id="3">-</div>
-                    <div class="cell" id="4">-</div>
-                    <div class="cell" id="5">-</div>
-                </div>
-
-                <div>
-                    <div class="cell" id="6">-</div>
-                    <div class="cell" id="7">-</div>
-                    <div class="cell" id="8">-</div>
-                </div>
-
-                <div class="btn-container"> <!-- Box dos botões -->
-                    <a onclick="IniciarJogo('automatico')" class="Botão1" >Máquina vs. Máquina</a>
-                </div> 
-        </div> 
+        <main>
+                <h1>Jogo da Velha</h1>
+                    <div class="container"> <!--Box onde vai ficar o jogo da velha-->
+                        <div class="cell" id="0"></div>
+                        <div class="cell" id="1"></div>
+                        <div class="cell" id="2"></div>
+                        <div class="cell" id="3"></div>
+                        <div class="cell" id="4"></div>
+                        <div class="cell" id="5"></div>
+                        <div class="cell" id="6"></div>
+                        <div class="cell" id="7"></div>
+                        <div class="cell" id="8"></div>
+                    </div>
+        </main>    
                 <div class="mensagemvitoria" mensagem-de-vitoria>  <!--Mensagem para quem venceu ou velha-->
                     <p class="textovitoria" texto-de-vitoria></p>
                 </div>
@@ -40,3 +30,8 @@
         <script src="../js/game.js"></script>
     </body>
 </html>
+
+
+               <!-- <div class="btn-container">  Box dos botões
+                    <a onclick="IniciarJogo('automatico')" class="Botão1" >Máquina vs. Máquina</a>
+                </div> --> 
