Código quase pronto

--- a/html/Tela de jogo.html
+++ b/html/Tela de jogo.html
@@ -27,11 +27,9 @@
                     <p class="textovitoria" texto-de-vitoria></p>
                 </div>
 
+                <div class="btn-container"> <!-- Box dos botões --> 
+                    <a onclick="IniciarJogo('automatico')" class="Botão1" >Máquina vs. Máquina</a>
+                </div>    
         <script src="../js/game.js"></script>
     </body>
-</html>
-
-
-               <!-- <div class="btn-container">  Box dos botões
-                    <a onclick="IniciarJogo('automatico')" class="Botão1" >Máquina vs. Máquina</a>
-                </div> --> 
+</html>             
