--- a/html/Tela de jogo.html
+++ b/html/Tela de jogo.html
@@ -22,14 +22,19 @@
                         <div class="cell" id="7"></div>
                         <div class="cell" id="8"></div>
                     </div>
-        </main>    
+        </main>  
+                
+                <div class="btn-container"> <!-- Box dos botões --> 
+                    <a id="btnStartGame" onclick="IniciaNovoJogo()" class="Botão1" >Player vs. Máquina</a>
+                </div> 
                 <div class="mensagemvitoria" mensagem-de-vitoria>  <!--Mensagem para quem venceu ou velha-->
                     <p class="textovitoria" texto-de-vitoria></p>
                 </div>
 
                 <div class="btn-container"> <!-- Box dos botões --> 
                     <a onclick="IniciarJogo('automatico')" class="Botão1" >Máquina vs. Máquina</a>
-                </div>    
+                </div>   
+                 
         <script src="../js/game.js"></script>
     </body>
 </html>             
