Refatorando HTML e CSS

--- a/html/Tela de jogo.html
+++ b/html/Tela de jogo.html
@@ -10,17 +10,15 @@
     
     <body>
         <main>
-                <h1>Jogo da Velha</h1>
-
-                    <div id="containerBoard" class="container"></div>
+            <h1>Jogo da Velha</h1>
+            <div id="containerBoard" class="container"></div>
         </main>  
-
-                <div class="btn-container"> <!-- Box dos botões --> 
-                    <a id="btnModeGame" onclick="SetarModoJogo()" class="Botão1" >Máquina vs. Máquina</a>
-                </div>
-                <div class="btn-container"> <!-- Box dos botões --> 
-                    <a id="btnStartGame" onclick="IniciaNovoJogo()" class="Botão1" >Iniciar o Jogo</a>
-                </div>   
+            <div class="btn-container"> <!-- Box dos botões --> 
+                <a id="btnModeGame" onclick="SetarModoJogo()" class="Botão1" >Máquina vs. Máquina</a>
+            </div>
+            <div class="btn-container"> <!-- Box dos botões --> 
+                <a id="btnModeGame" onclick="SetarModoJogo()" class="Botão1" >Player vs. Máquina</a>
+            </div>
         <script src="../js/game.js"></script>
     </body>
 </html>             
