Resolvendo bug de tabuleiro e adicionando o btn voltar

--- a/html/Tela de jogo.html
+++ b/html/Tela de jogo.html
@@ -21,7 +21,8 @@
             </div>
             <div class="btn-container"> <!-- Box dos botões --> 
                 <a id="btnReinicia" onclick="reiniciaJogo()" class="Botão" >Reiniciar</a>
-            </div>
+                <button id="botaoVoltar">Voltar</button>
+            </div>   
         </div>
         <script src="../js/game.js"></script>
     </body>
